--- a/modules/consumptions/client/views/list-consumption-users.client.view.html
+++ b/modules/consumptions/client/views/list-consumption-users.client.view.html
@@ -1,24 +1,20 @@
-<section ng-controller="UsersController" ng-init="find()">
+<section ng-controller="ConsumptionUsersController as controller">
   <div class="page-header">
-    <h1>Consumptions</h1>
+    <h1>Gebruikers</h1>
   </div>
-  <table class="table table-hover">
-    <tr>
-      <th><input type="checkbox" ng-model="checkAll" ng-change="toggleCheckAll()"></th>
-      <th>User</th>
-      <th>Created</th>
-      <th>Paid</th>
-      <th>Paid On</th>
-    </tr>
-    <tr ng-repeat="consumption in consumptions">
-      <td><input type="checkbox" ng-model="consumption.checked" ng-true-value="true" ng-false-value="false"></td>
-      <td><a ng-bind="consumption.user.displayName" ui-sref="users.view({userId: consumption.user._id})"></a></td>
-      <td ng-bind="consumption.created | date:'mediumDate'"></td>
-      <td>-</td>
-      <td>-</td>
-    </tr>
-  </table>
-  <div class="alert alert-warning text-center" ng-if="consumptions.$resolved && !consumptions.length">
-    No consumptions yet, why don't you <a ui-sref="consumptions.create">create one</a>?
+  <div class="panel panel-default">
+    <div class="panel-heading">Overzicht van gebruikers</div>
+    <table class="table table-hover">
+      <tr>
+        <th>Naam</th>
+        <th>Open</th>
+      </tr>
+      <tr ng-repeat="user in users">
+        <td>
+          <a ng-bind="user.displayName" ui-sref="consumption-users.view({consumptionUserId: user._id})"></a>
+        </td>
+        <td>{{user.balance | currency : '€'}}</td>
+      </tr>
+    </table>
   </div>
 </section>
