--- a/modules/consumptions/client/views/view-consumption-user.client.view.html
+++ b/modules/consumptions/client/views/view-consumption-user.client.view.html
@@ -1,1 +1,36 @@
-test123
+<section class="view-consumption-user" ng-controller="ConsumptionUsersController">
+  <div class="page-header">
+    <h1>Gebruiker - {{user.displayName}}</h1>
+  </div>
+  <div class="user-details col-md-12">
+    <div class="row">
+      <div class="col-md-8 user-details-left">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="row">
+              <label for="displayName" class="col-xs-2 text-right">Naam</label>
+              <span class="col-xs-5 text-left" ng-bind="user.displayName"></span>
+            </div>
+            <div class="row">
+              <label for="email" class="col-xs-2 text-right">Email</label>
+              <span class="col-xs-5 text-left" ng-bind="user.email"></span>
+            </div>
+          </div>
+          <img class="barcode col-md-4" barcode ng-model="user._id">
+
+          </img>
+        </div>
+      </div>
+      <div class="col-md-4 user-details-right">
+        <div class="panel panel-default">
+          <div class="panel-body text-center">
+            <h2>Open bedrag: <b ng-bind="user.balance | currency : '€'"></b></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-12" ng-include="'/modules/consumptions/client/views/list-consumptions.client.view.html'">
+
+  </div>
+</section>
