--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,9 +1,5 @@
 <section ng-controller="HomeController">
-  <br />
-  <div class="well">
-    <h2>Burcht Bar - Consumptie Registratie</h2>
-    <p>
-      Eerst registreren dan drinken
-    </p>
-  </div>
+  <div class="row">
+    <div class="col-md-12" ng-include="'/modules/consumptions/client/views/list-consumption-users.client.view.html'">
+    </div>
 </section>
